# claude-code-stacks

./: .gitignore  .stack-metadata.json  CLAUDE.md  Cargo.toml  GITHUB_SETUP.md  LICENSE  README.md  REFERENCE.md  build.sh  claude-workflow-manager.sh  install.sh  mcp-checker.sh  natural-language-processor.py  stack-contribute.sh  stack-router.sh  tmux-stack-manager.sh
.claude/: .local-settings.json
.claude/agents/: stack-1_linting-agent.md  stack-2_testing-specialist.md
.claude/commands/: stack-1_lint-interface.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs
src/cli/: checkout.rs  cleanup.rs  mod.rs  pull.rs  push.rs  status.rs  sync.rs  worktree.rs
src/core/: mcp_validator.rs  mod.rs  permission_generator.rs  remote_stack_manager.rs  settings_merger.rs  stack_manager.rs  symlink_manager.rs
src/utils/: claude_md_updater.rs  dependency_check.rs  mod.rs
stacks/stack-1/: CLAUDE.md  init.sh
stacks/stack-2/: .local-settings.json  CLAUDE.md  init.sh
stacks/stack-3/: .local-settings.json  CLAUDE.md  init.sh
stacks/stack-4/: CLAUDE.md
stacks/stack-5/: CLAUDE.md
stacks/stack-6/: CLAUDE.md
stacks/stack-7/: CLAUDE.md
stacks/stackstack/: CLAUDE.md
stacks/vbrad-stack/: .mcp.json  CLAUDE.md  better-auth.com_docs_authentication_google.md  better-auth.com_docs_installation.md  bun_drizzle_generic_guide.md  bun_drizzle_guardian_guide.md  common-better-auth-solutions.md  common-scripts.md  common-supabase-solutions.md  supabase-mcp-setup.md  tech_stack_guide_agnostic.md  vbrad-frontend-stack-setup.md
tests/: integration_tests.rs
(+10 files in other folders)
